--- a/00_pytorch.ipynb
+++ b/00_pytorch.ipynb
@@ -1,21 +1,215 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch\n",
-    "torch.__version__"
+    "PyTorch 00"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pytorch Version: 1.13.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "print(\"Pytorch Version: \" + torch.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# scalar tensor\n",
+    "scalar = torch.tensor(7)\n",
+    "scalar\n",
+    "\n",
+    "scalar.ndim #dimension\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([7.7000])\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Vector \n",
+    "vector = torch.tensor([7.7])\n",
+    "print(vector)\n",
+    "print(vector.ndim)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 7,  8],\n",
+      "        [ 9, 10]])\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#MATRIX\n",
+    "MATRIX = torch.tensor([[7, 8],\n",
+    "                       [9, 10]])\n",
+    "print(MATRIX)\n",
+    "print(MATRIX.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 9, 10])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MATRIX[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 2])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MATRIX.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[1, 2, 1],\n",
+      "         [1, 1, 0],\n",
+      "         [1, 1, 2]]])\n",
+      "3\n",
+      "torch.Size([1, 3, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#TENSOR\n",
+    "TENSOR = torch.tensor([[[1, 2, 1],\n",
+    "                       [1, 1, 0],\n",
+    "                       [1, 1, 2]]])\n",
+    "print(TENSOR)\n",
+    "print(TENSOR.ndim)\n",
+    "print(TENSOR.shape)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating Tensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "torch.Size([3, 7])\n",
+      "tensor([[0.4781, 0.8840, 0.3208, 0.1702, 0.6051, 0.6483, 0.4660],\n",
+      "        [0.0127, 0.2432, 0.4693, 0.5071, 0.3023, 0.8946, 0.5158],\n",
+      "        [0.8983, 0.9345, 0.5592, 0.4146, 0.6529, 0.8651, 0.6174]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Random Tensor\n",
+    "#Create a random tensor\n",
+    "\n",
+    "#provide size\n",
+    "random_tensor = torch.rand(3, 7)\n",
+    "print(random_tensor.ndim)\n",
+    "print(random_tensor.shape)\n",
+    "print(random_tensor)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Random tensor with similar shape to image tensor\n",
+    "random_image_size_tensor = torch.rand(size=(224, 224, 3)) # height, width, color channels\n"
+   ]
   }
  ],
  "metadata": {
