--- a/00_pytorch.ipynb
+++ b/00_pytorch.ipynb
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -1533,14 +1533,14 @@
        "'cpu'"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Setup device agnostic code (i.e use GPU if possible)\n",
-    "device = \"cude\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "device"
    ]
   },
