--- a/00_pytorch.ipynb
+++ b/00_pytorch.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "0"
       ]
      },
-     "execution_count": 310,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1374,7 @@
        "        1., 1., 1., 1., 1., 1.], dtype=float32))"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,18 +1399,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.2990, 0.3136, 0.3891],\n",
-       "        [0.0504, 0.9545, 0.5118],\n",
-       "        [0.2668, 0.5902, 0.1929]])"
+       "tensor([[0.3260, 0.2897, 0.3466],\n",
+       "        [0.6945, 0.6382, 0.8429],\n",
+       "        [0.0186, 0.4801, 0.1666]])"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1511,7 +1511,7 @@
        "False"
       ]
      },
-     "execution_count": 365,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1533,7 @@
        "'cpu'"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,12 +1541,13 @@
    "source": [
     "#Setup device agnostic code (i.e use GPU if possible)\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "tensor = torch.tensor([1,2,3])\n",
     "device"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1556,7 @@
        "0"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,6 +1564,58 @@
    "source": [
     "#Count number of devices?\n",
     "torch.cuda.device_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1, 2, 3]), device(type='cpu'))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Move tensor to GPU (if available)\n",
+    "tensor_on_target = tensor.to(device)\n",
+    "tensor_on_target, tensor_on_target.device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Moving tensors back to the CPU\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3], dtype=int64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# If tensor is on GPU, can't trandorm it to NumpPy\n",
+    "# To fixc the GPU tensor with NumPy issue, we can first set it to the CPU\n",
+    "tensorOnCpu = tensor.to(device=\"cpu\")\n",
+    "tensor.numpy()   # able to convert tensor to numpy data when it is computed by the CPU!"
    ]
   },
   {
