--- a/01_pytorch.ipynb
+++ b/01_pytorch.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,6 +296,28 @@
     "        #Forward emthod to define the computation in the model\n",
     "        def forward(self, x: torch.Tensor) -> torch.Tensor: # <- \"x\" is the input data\n",
     "            return self.weights * x + self.bias    #this is effectively the Linear regression formula                                                                           \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The forward method has to be overridden when using nn.Module"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PyTorch model building essentials ###\n",
+    "* `torch.nn` - contains all of the buildings for computational graphs (a neural network can be considered a computational graph)\n",
+    "* `torch.nn.parameter` - what parameters should our model try and elarn, often a PyTorch layer from torch.nn will set these for us\n",
+    "* `torch.nn.module` - The base class for all neural network modules, if you subclass it, you should overwrite `forward()`\n",
+    "* `torch.optim` - this where the optimizers in PyTorch live, they will help with gradient descent\n",
+    "* `def forward()` - All nn,Module subclasses require you t overwrite forward(), this method defines what happens in the forward computation\n",
+    "\n"
    ]
   }
  ],
